--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -3,8 +3,15 @@ on:
   push:
     branches: [ master ]
 jobs:
-  Explore-GitHub-Actions:
+  build and deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Use Node.js 16
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          cache: 'npm'
+      - run: npm install
       - run: npm run deploy
+      
