--- a/.github/workflows/deploy-on-push-to-master.yaml
+++ b/.github/workflows/deploy-on-push-to-master.yaml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ master ]
 jobs:
-  build and deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
