--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -1,9 +1,9 @@
-name: deploy-on-push-to-master
+name: deployment
 on: 
   push:
     branches: [ master ]
 jobs:
-  build-and-deploy:
+  build and deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
