--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -2,6 +2,8 @@ name: Deployment
 on: 
   push:
     branches: [ master ]
+env:
+  USERNAME: krzysiou
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -12,6 +14,7 @@ jobs:
         with:
           node-version: 16
           cache: 'npm'
+      - run: git config --global user.name $USERNAME
       - run: npm install
       - run: npm run deploy
       
