--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -1,20 +1,27 @@
-name: Deployment
-on: 
+name: Deploy to gh-pages
+
+on:
   push:
-    branches: [ master ]
-env:
-  USERNAME: krzysiou
+    branches:
+      - master
+
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js 16
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16
-          cache: 'npm'
-      - run: git config --global user.name $USERNAME
-      - run: npm install
-      - run: npm run deploy
-      
+    gh-pages-deploy:
+      name: Deploying to gh-pages
+      runs-on: ubuntu-latest
+      steps:
+        - name: Setup Node
+          uses: actions/setup-node@v1.1.0
+          with:
+            version:  16.14.2
+
+        - name: Checkout branch
+          uses: actions/checkout@v2
+
+        - name: Install dependencies
+          run: npm install
+
+        - name: Deploy app
+          run: npm run deploy
+          with:
+           github_token: ${{ secrets.ACCESS_TOKEN }}
