--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -14,7 +14,7 @@ jobs:
           uses: actions/setup-node@v2
           with:
             node-version: 16.14.2
-            cache: 'yarn'
+            cache: 'npm'
 
         - name: Checkout branch
           uses: actions/checkout@v2
