--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -12,7 +12,7 @@ jobs:
       steps:
         - name: Checkout branch
           uses: actions/checkout@v2
-          
+
         - name: Use Node
           uses: actions/setup-node@v2
           with:
@@ -25,7 +25,7 @@ jobs:
         - name: Build app
           run: npm run build
 
-        - name: deploy
+        - name: Deploy
           uses: peaceiris/actions-gh-pages@v3
           with:
            github_token: ${{ secrets.ACCESS_TOKEN }}
