--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -1,4 +1,4 @@
-name: Deploy to gh-pages
+name: deploy-to-gh-pages
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
 
 jobs:
     gh-pages-deploy:
-      name: Deploying to gh-pages
+      name: deploy-to-gh-pages
       runs-on: ubuntu-latest
       steps:
         - name: Checkout branch
