--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -5,6 +5,7 @@ runs:
   steps:
     - name: Export Node Version
       run: echo "NODE_VERSION=$(cat .nvmrc)" >> $GITHUB_ENV
+      shell: bash
 
     - name: Setup Node 
       uses: actions/setup-node@v3
@@ -13,3 +14,4 @@ runs:
 
     - name: Install Dependencies
       run: npm install
+      shell: bash
