--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "homepage": "https://krzysiou.github.io",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.52.2",
+    "@react-three/fiber": "^8.10.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +18,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.56.0",
+    "three": "^0.148.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
