--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,21 +5,8 @@ on:
     branches: [ master ]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout branch
-        uses: actions/checkout@v3
-
-      - name: Setup
-        uses: ./.github/actions/setup
-
-      - name: Test
-        run: npm run test
-
   deploy:
     runs-on: ubuntu-latest
-    needs: [ test ]
     steps:
       - name: Checkout branch
         uses: actions/checkout@v3
@@ -34,4 +21,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.ACCESS_TOKEN }}
-          publish_dir: ./build
+          publish_dir: ./out
